# capsa

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/regex/: Cargo.toml  Makefile  README.md  build.rs  wrapper.h
crates/core/regex/src/: bindings.rs  lib.rs  validate.rs
crates/core/regex/src/rules/: data.rs  mod.rs  rules.tsv
crates/core/regex/src/rules/tests/: mod.rs  ordering.rs
crates/core/regex/src/rules/tests/rules/: rule.rs
crates/core/regex/tests/: smoke.rs  sql_rules_compile.rs  validate_sql_query_rules.rs
crates/core/sql/: Cargo.toml  README.md
crates/core/sql/src/: lib.rs
crates/core/sql/src/parser/: mod.rs  parse.rs
crates/core/sql/src/parser/tests/: mod.rs  parse_sql.rs
crates/core/sql/src/validate/: mod.rs  validation.rs
crates/core/sql/src/validate/tests/: validate.rs
crates/core/src/: lib.rs
